# git-diff-analyzer

./: .gitignore  Cargo.toml  config.toml  diff_analysis.json
src/: lib.rs  main.rs
src/ui/: analysis.rs  app.rs  auth.rs  github.rs  mod.rs
