[package]
name = "code-review-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
git2 = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
eframe = "0.30"
tree-sitter = "0.25.6"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.1"
tree-sitter-go = "0.23.4"
tree-sitter-json = "0.24.8"
anyhow = "1.0.98"
tracing = "0.1.41"
dashmap = "7.0.0-rc2"
num_cpus = "1.17.0"
similar = "2.7.0"
libc = "0.2.174"
dirs = "5.0"
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "diff-analyzer-ui"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

# Edition 2024 specific features
[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
